# reddit-video

./: .gitignore  Cargo.toml  README.md  cmd  config.toml  justfile  nohup.out
src/: config.rs  lib.rs  main.rs  number.rs  reddit.rs
src/config/: macros.rs  mod.rs
src/reddit/: json.rs  mod.rs  number.rs
src/video/: drawtext.rs  ffmpeg.rs  mod.rs
src/voice/: mod.rs
