[package]
name = "reddit-video"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
mp3-duration = "0.1.10"
inquire = "0.6.2"
const_format = "0.2.30"
regex = "1.8.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.7.4"
stilo = "0.3.2"
